[package]
name = "quick-junit"
description = "Data model and serializer for JUnit/XUnit XML"
version = "0.5.1"
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nextest-rs/quick-junit"
documentation = "https://docs.rs/quick-junit"
keywords = ["junit", "xunit", "xml", "serializer", "flaky-tests"]
categories = ["encoding", "development-tools"]
edition = "2021"
rust-version = "1.70"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["std"] }
indexmap = "2.10.0"
quick-xml = "0.38.2"
newtype-uuid = "1.2.4"
thiserror = "2.0.16"
strip-ansi-escapes = "0.2.1"
uuid = "1.17.0"

[dev-dependencies]
goldenfile = "1.7.3"
owo-colors = "4.1.0"
proptest = "1.7.0"
test-strategy = "0.4.3"
