[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"
rust-version = "1.79"

[workspace.dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
goldenfile = "1.7.3"
indexmap = "2.11.4"
newtype-uuid = "1.2.4"
owo-colors = "4.1.0"
pretty_assertions = "1.4.1"
proptest = "1.7.0"
quick-junit = { path = "crates/quick-junit" }
quick-xml = "0.39.2"
strip-ansi-escapes = "0.2.1"
test-strategy = "0.4.3"
thiserror = "2.0.17"
uuid = "1.17.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[profile.dev.package.proptest]
opt-level = 3
