[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"
rust-version = "1.79"

[workspace.dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["std"] }
goldenfile = "1.7.3"
indexmap = "2.11.4"
newtype-uuid = "1.3.2"
owo-colors = "4.3.0"
pretty_assertions = "1.4.1"
proptest = "1.7.0"
quick-junit = { path = "crates/quick-junit" }
quick-xml = "0.38.4"
strip-ansi-escapes = "0.2.1"
test-strategy = "0.4.3"
thiserror = "2.0.18"
uuid = "1.17.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[profile.dev.package.proptest]
opt-level = 3
